Readme.md upate

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-> live https://linber23.github.io/ersteProjekt/
+> live Version: https://linber23.github.io/ersteProjekt/
 
 <!DOCTYPE html>
 <html lang="de">
